fix: 검증 과정에서 보너스 볼 2개 들어가는 문제 해결
중복 검증 과정에서 보너스 볼이 2개 들어가는 문제가 발생하여 이를 해결하였습니다.